style.css
:root {
  --blue: #04aadd;
  --blue-dark: #00303f;
  --green: #20d420;
  --orange: sandybrown;
  --orange-dark: #80420d;

  --primary: var(--blue);
  --primary-dark: var(--blue-dark);
  --text-color: #1b1b1b;
  --base-font: 'Heebo', sans-serif;
  --bg-primary: white;
  --bg-secondary: whitesmoke;
}

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

body {
  background-color: var(--bg-secondary);
  font-family: var(--base-font);
  font-weight: 300;
  color: var(--text-color);
  transition: color .2s ease, background-color .2s ease, box-shadow .2s ease;
}

main {
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: calc(100vh - var(--navbar-height));
  padding: 20px 0;
}

a {
  color: var(--primary);
}

:root {
  --navbar-height: 80px;
}

.navbar {
  height: var(--navbar-height);
  background-color: var(--bg-primary);
  position: relative;
}

.navbar-logo {
  font-size: 48px;
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  font-weight: 100;
  white-space: nowrap;
}

.navbar a {
  text-decoration: none;
}




.container {
  width: 95%;
  max-width: 1400px;
  margin: 0 auto;
}

.navbar-nav {
  height: 100%;
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

.navbar-menu {
  display: flex;
  gap: 15px;
  list-style: none;
  font-size: 20px;
}

hr {
  background-color: lightgrey;
  border: none;
  height: .5px;
  width: 100%;
  margin-bottom: 10px;
}

.field {
  margin-bottom: 20px;
}

label {
  display: block;
  margin-bottom: 2.5px;
  font-size: 20px;
  font-weight: 300;
}

input {
  background-color: transparent;
  border-radius: 5px;
  border: none;
  box-shadow: inset 0 0 2.5px grey;
  color: var(--text-color);
  font-family: var(--base-font);
  font-size: 18px;
  outline: none;
  padding: 10px;
  transition: box-shadow .2s ease, background-color .2s ease;
  width: 100%;
  -webkit-tap-highlight-color: transparent;
}

input:hover,
input:focus,
input:focus-visible {
  box-shadow: inset 0 0 2.5px var(--primary);
}

.calculator {
  background-color: var(--bg-primary);
  max-width: 600px;
  width: 100%;
  box-shadow: 0 2.5px 10px darkgrey;
  border-radius: 10px;
  overflow: hidden;
  margin: 0 auto;
}

.calculator-body {
  padding: 15px 15px 0 15px;
  border-bottom: 1px solid lightgrey;
}

.calculator-footer {
  padding: 15px;
  font-size: 36px;
}

.text-green {color: var(--green)}
.text-blue {color: var(--blue)}
.text-primary {color: var(--primary)}

footer {
  background-color: var(--bg-primary);
  display: grid;
  justify-content: center;
  align-items: center;
  align-content: center;
  height: 40px;
  font-size: 20px;
}

@media screen and (max-width: 600px) {
  .navbar-logo {
    font-size: 38px;
    transform: translateX(0);
    left: 25px;
  }
  :root {--navbar-height: 60px}
  input {padding: 8px}
  .calculator-footer {font-size: 34px;}
}

.sm-view {display: none;}

@media screen and (max-width: 600px) {
  .sm-view {display: inline-block}
  .lg-view {display: none}
}

.theme-dark {
  --bg-primary: #242424;
  --bg-secondary: #141414;
  --text-color: white;
  --primary: var(--orange);
  --primary-dark: var(--orange-dark);
}

.theme-dark .calculator {box-shadow: 0 2.5px 5px black}
.theme-dark input {box-shadow: inset 0 0 2.5px black}
.theme-dark input:hover {
  background-color: #1d1d1d;
  box-shadow: inset 0 0 2.5px var(--primary);
}
.theme-dark hr {background-color: #7e7e7e}
.theme-dark .calculator-body {border-bottom: .5px solid #7e7e7e}

.theme-icon {
  color: skyblue;
  font-size: 28px;
  cursor: pointer;
  margin-right: 10px;
}

.theme-dark .theme-icon {
  color: sandybrown;
}

